# mayfair

./: .gitignore  .replit  README.md  app.py  pyproject.toml  replit.nix  requirements.txt
static/css/: style.css
static/js/: main.js
templates/: about.html  base.html  contact.html  gallery.html  index.html  process.html  testimonials.html
