[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mayfair-luxe-living"
version = "1.0.0"
description = "Mayfair Luxe Living - Luxury Interior Design Website"
authors = [{name = "Mayfair Luxe Living"}]
requires-python = ">=3.9"
dependencies = [
    "Flask>=3.1.1",
    "gunicorn>=23.0.0",
    "pillow>=11.3.0",
    "numpy>=2.3.2",
    "docx2txt>=0.9"
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"] 